<resources>
    <string name="app_name">편해?편앱!</string>
    <string name="action_settings">Settings</string>

    <string name="shop">Shop</string>
    <string name="branch">Branch</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="logoutBtn">Logout</string>

    <string name="parse_app_id">ZVDVs21M1bzc7BncHrpMuwnwxzCK6NZX1EBWIBif</string>
    <string name="parse_client_key">klzIkZZs5c5zxYsn2yUMVl54CVGtyNUlUU9b4Use</string>

</resources>
