<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_shop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop" />

    <EditText
        android:id="@+id/edt_shop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_shop"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_branch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/branch"
        android:layout_below="@+id/edt_shop"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edt_branch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/tv_branch"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/edt_branch"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:layout_below="@+id/edt_password"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpBtn"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
